# python-securid

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.rst  changelog.txt  pyproject.toml  requirements-dev.txt  requirements.txt  securid.py  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: release.yml  tests.yml
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/securid/: exceptions.html  jsontoken.html  sdtid.html  stdin.html  stoken.html  token.html  utils.html
docs/_build/html/_sources/: index.rst.txt
securid/: __init__.py  cli.py  exceptions.py  jsontoken.py  sdtid.py  stdin.py  stoken.py  token.py  utils.py
tests/: cli_test.py  random.sdtid  sdtid_test.py  stoken_test.py  stokenrc  token_test.py  util_test.py
