[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 132

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["securid"]

[tool.coverage.report]
exclude_lines = [ "# pragma: no cover", "if TYPE_CHECKING:" ]
