[metadata]
name = securid
version = attr: securid.__init__.__version__
keywords = securid, otp
description = Python RSA SecurID 128-bit compatible library
author = Andrea Bonomi
author_email = andrea.bonomi@gmail.com
url = http://github.com/andreax79/python-securid
long_description = python-securid is a Python library for generating RSA SecurID 128-bit compatible token codes
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
project_urls =
    Bug Tracker = http://github.com/andreax79/python-securid/issues
    Source Code = http://github.com/andreax79/python-securid

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.5
packages = find:
install_requires =
    cryptography>=36

[options.packages.find]
include = securid*
exclude =
    ez_setup
    examples
    tests

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    securid = securid.cli:main

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 132
extend-ignore =
    E203
    E401
    W504
    E221
